<resources>
    <string name="app_name">MichiApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textExample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec leo ipsum. Phasellus ac ornare velit, a sodales mi. Etiam a dui ante. Duis ullamcorper dapibus sapien, quis congue metus ornare ac. Nullam vel semper nulla.</string>
    <string name="kilograms"> kilograms</string>
    <string name="years"> years</string>
    <string name="moreinfo">Description</string>
    <string name="i">More info</string>
    <string name="done">Done</string>
    <string name="breed_name">Breed Name</string>
    <string name="country">Country name</string>
    <string name="mood">Mood</string>
    <string name="start_now">start now</string>
    <string name="dscp_cat">Learn more about us so you can become a good Karen!</string>
</resources>