<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/purple_cat"
    tools:context=".ui.fragments.BreedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            tools:background="@color/white">

            <ImageView
                android:id="@+id/catpic"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:adjustViewBounds="true"
                android:src="@drawable/loadingcat"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breed_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:text="Country name"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_baseline_line_weight_24"
                android:text="@string/kilograms"
                android:textSize="16sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/lifespan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_pets_24"
                android:text="@string/years"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moreinfo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textExample"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMoreinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/purple_secondcat"
            android:textColor="@color/black"
            android:text="@string/i"
            app:iconTint="@color/black"
            app:icon="@drawable/ic_baseline_info_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/purple_secondcat"
            android:text="@string/done"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            app:icon="@drawable/ic_baseline_check_circle_24"/>

    </LinearLayout>

</LinearLayout>